<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/city_background"
    tools:context="com.example.www.nfcbusinesscardlocal.Appointments">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/lesspadding"
        android:orientation="vertical"
        android:weightSum="6"
        android:background="@color/lightblue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:orientation="vertical">
            <EditText
                android:id="@+id/meetingtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Appointment (Interview|Skype Call|Consulation)"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/textsize"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:orientation="vertical">
            <Button
                android:id="@+id/meetingdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/fontsize"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:textStyle="bold"
                android:text="Click to Set Date"
                android:padding="@dimen/padding"
                android:drawableRight="@drawable/ic_event"
                 />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:orientation="vertical">
            <Button
                android:id="@+id/meetingtime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Click to Set Time"
                android:drawableRight="@drawable/ic_clock"
                android:textSize="@dimen/fontsize"
                android:padding="@dimen/padding"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/lesspadding"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etlengthOfTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="Duration of meeting (in hours)"
                android:textColorHint="@color/white"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:orientation="vertical">
            <EditText
                android:id="@+id/meetingnotes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Additional Notes(optional)"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/textsize"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/saveappointment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
                android:padding="@dimen/padding"
                android:text="Save Appointment"
                android:drawableRight="@drawable/ic_done"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
