<resources>
    <string name="app_name">Smart Biz Card</string>
    <!--Strings for main menu-->
    <string name="sendcard">Send Biz Card</string>
    <string name="receivecard">Receive Biz Card</string>
    <string name="updateinfo">View My Card</string>
    <string name="edit_nfc">Details on NFC Card</string>
    <string name="managecards">Manage Cards</string>
    <!--Strings for View Details-->
    <string name="defaultname">User Fullname</string>
    <string name="defaultjob">Job Title</string>
    <string name="personal">+27 81 234 5678</string>
    <string name="office">+27 14 225 1452</string>
    <string name="email">example@epiuse.com</string>
    <string name="address">1056 Lynnwood Rd, Brooklyn, Pretoria, 0031</string>
    <string name="company">EPI-USE South Africa</string>
    <!--Strings for Manage Cards-->
    <string name="recievedcards">View Cards</string>
    <string name="readcard">Read Information</string>
    <string name="deletecard">Delete Information</string>
    <string name="updatecard">Write Information</string>
    <!--Strings for Log in-->
    <string name="loginemailbanner">Please enter email:</string>
    <string name="loginemail">Email</string>
    <string name="loginpasswordbanner">Please enter password:</string>
    <string name="loginpassword">Password</string>
    <string name="enter">Log in</string>
    <string name="register">No account? Register now.</string>
    <!--Strings for Registration-->
    <string name="create_account">Create Account</string>
    <!--Strings for recieve qr -->
    <string name="qrscanbanner">Activate QR Scanner</string>
    <string name="qrscan">Activate Scanner</string>
    <!--Strings for send qr -->
    <string name="grbanner">Generate Code</string>
    <!--Strings for send NFC-->
    <string name="sendnotify">Touch to Send </string>
    <!--Strings for send interface-->
    <string name="sendbanner">Select A Sending Option:</string>
    <string name="nfcsend">NFC</string>
    <string name="qrsend">QR Code</string>
    <!--Strings for update interface-->
    <string name="update_account">Update Details</string>
    <!--Strings for receiver interface-->
    <string name="receiverbanner">Business Card Details:</string>
    <!--Strings for receive interface-->
    <string name="receivebanner">Select A Receiving Option:</string>
    <string name="nfcreceive">NFC</string>
    <string name="qrreceive">QR Scanner</string>
    <string name="tapreceive">Touch to Receive Details</string>

    <!-- Strings related to Fragments-->
    <string name="message_write_error">Error Writing Message !</string>
    <string name="message_delete_error">Error deleting details !</string>
    <string name="message_write_success">Successfully written to Card !</string>
    <string name="message_delete_success">Successfully deleted details!</string>
    <string name="message_write_progress">Writing to Card..</string>
    <string name="message_delete_progress">deleting details..</string>
    <string name="message_tag_detected">NFC Card Detected !</string>
    <string name="message_read_tag">Read from NFC Card</string>
    <string name="message_write_tag">Write to NFC Card</string>
    <string name="message_delete_tag">Delete details on NFC Card</string>
    <string name="message_tap_tag">Touch the NFC Card to your device !</string>
    <!--Strings for datetime-->
    <!--ORC-->
    <string name="photo">Photo</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- OCR Library -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Storage doesn\'t available</string>
    <string name="title_activity_ocr">Ocr Capture Activity</string>

    <!--Agreement-->
    <string name="agreement">
        <strong>Smart Biz Card Agreement:</strong>\n\n
Non-public information – Refers to private information, this includes the information that a user provides when they sign up and information they received when receiving a virtual business card.\n
Authorised Admin users – Refers to members that are developing, implementing, testing and maintaining the application and databases. The authorised admin user will therefore adhere to the Protection of Private Information Act, 2013.\n
\n
Protection of Non-public Information. You agree to:\n
•	To willingly provide contact details, name, surname, company name and business location.\n
•	Refrain from disclosing non-public information to anyone, except as permitted under those policies;\n
•	Reasonably safeguard your account against unauthorized access and use.\n
\n
Violation. You agree that, in case of a violation of this agreement, including improper access, use, or disclosure of non-public information:\n
•	You will report the violation immediately;\n
•	You will delete or otherwise destroy all non-public information in your possession and control, if instructed by authorised admin users;\n
•	Your access to non-public information may be terminated; and\n
\n
Other provisions. You also agree:\n
•	This agreement does not create an employment, agency, partnership, or joint venture relationship between you and authorised admin users and their partners.\n
•	You may not transfer or assign your rights or obligations under this agreement;\n
•	You are solely responsible for how you access and use non-public information, and your activity or account may be reviewed by other authorized admin users.\n
•	The laws of the Republic of South Africa will govern this agreement (without reference to conflict of laws principles).\n
•	Are18 years and older, hence legible to sign a legally binding agreement.\n
\n
By clicking “Accept” you acknowledge that you have read, reviewed and agree to the stated above.\n
    </string>
</resources>
